--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-image: url('./img/boss-image.png'); /* 确保图片覆盖整个页面 */
+            background-image: url('./img/background.png');
             background-size: cover;
             background-position: center;
         }
@@ -126,37 +126,104 @@
         const script = {
             1: {
                 scene: "村莊",
-                npc: "村長：“英勇的戰士，我們需要你的幫助！我們的公主被魔王抓走了，據說她被關在黑暗城堡中。我們村子裡沒有其他人能夠完成這個任務。”",
+                npc: `村長：“英勇的戰士，我們村莊正面臨著巨大的危機。我們的公主被邪惡的魔王抓走了，據說她被關在遠方那座陰森的黑暗城堡裡。這是一項艱難且危險的任務，我們村子裡沒有其他人能夠勝任。只有你，擁有無與倫比的勇氣和力量，才能成功拯救她。我懇請你幫助我們，救出我們的公主。”`,
                 options: [
-                    { text: "英雄：“我會立即出發！”", nextScene: 2 }
+                    { text: "英雄：“我會立即出發，村長！公主的安危是最重要的。”", nextScene: 2 },
+                    { text: "英雄：“村長，請告訴我更多有關魔王的訊息。他有什麼弱點嗎？”", nextScene: 1.1 },
+                    { text: "英雄：“這是一個重大決定，我需要時間準備和考慮。”", nextScene: 1.2 }
+                ]
+            },
+            1.1: {
+                scene: "村莊",
+                npc: `村長：“魔王是一個強大且狡猾的對手。他擁有黑暗的魔法，並且手下有一群兇猛的怪物守護著他的城堡。據說，他的力量來自於一個古老的魔法寶物，但具體的細節並不清楚。你需要小心謹慎，並且充分準備。我們會盡力提供你所需的一切幫助。”`,
+                options: [
+                    { text: "英雄：“聽起來很艱難，但我會立即出發，沒有什麼能阻止我拯救公主！”", nextScene: 2 },
+                    { text: "英雄：“我會先去做一些準備，這樣才能更好地面對魔王的挑戰。”", nextScene: 1.2 }
+                ]
+            },
+            1.2: {
+                scene: "村莊",
+                npc: `村民：“戰士，這裡有一些我們能夠提供的資源和裝備，希望這些能夠幫助你。這些是我們村裡最好的武器和防具，還有一些治療藥水。請一定要小心，魔王的領地裡充滿了危險，但我們相信你一定能夠克服一切困難。”`,
+                options: [
+                    { text: "英雄：“感謝你們的支持！我會帶著這些裝備前往黑暗城堡，救出公主。”", nextScene: 2 }
                 ]
             },
             2: {
                 scene: "森林關卡",
-                npc: "守衛：“誰敢擅闖魔王的領地！”",
+                npc: `守衛：“站住！誰敢擅闖魔王的領地？這片森林受魔王的控制，任何試圖穿越者都會面臨嚴重的後果。你是誰？為什麼來到這裡？”`,
                 options: [
-                    { text: "英雄：“我來這裡是為了拯救公主！”", nextScene: 3 }
+                    { text: "英雄：“我是來自村莊的勇士，我來這裡是為了拯救被魔王劫持的公主！”", nextScene: 3 },
+                    { text: "英雄：“我只是一個迷路的旅人，無意冒犯，只是誤入這片森林。”", nextScene: 2.1 },
+                    { text: "英雄：“守衛，我們能不能做個交易？我給你一些金幣，你讓我通過。”", nextScene: 2.2 }
+                ]
+            },
+            2.1: {
+                scene: "森林關卡",
+                npc: `守衛：“迷路的旅人？這片森林並不是你隨便能進來的地方。立刻離開，否則我會毫不猶豫地將你驅逐！這裡並不歡迎外人，更別說是那些對魔王意圖不軌的人。”`,
+                options: [
+                    { text: "英雄：“我並不是敵人，我來這裡的唯一目的是救出公主。”", nextScene: 3 }
+                ]
+            },
+            2.2: {
+                scene: "森林關卡",
+                npc: `守衛：“金幣？你竟敢用這些黃金來收買我？不過，好吧，看在這些金幣的份上，我可以讓你通過。但要小心，這只是開始，前方的路會更加危險。”`,
+                options: [
+                    { text: "英雄給了守衛一些金幣，守衛讓路：“謝謝你，我會小心的。”", nextScene: 3 }
                 ]
             },
             3: {
                 scene: "迷宮入口",
-                npc: "石碑：“只有智慧與勇氣兼備者才能穿越這迷宮。”",
+                npc: `石碑：“這座迷宮是由古代的巫師建造的，只有智慧與勇氣兼備的人才能通過。每一塊石頭上都刻著神秘的符號，這些符號隱藏著解開迷宮之謎的線索。只有解開這些謎題，你才能進入城堡的深處。”`,
                 options: [
-                    { text: "英雄仔細觀察石碑上的符號，試圖解開謎題。", nextScene: 4 }
+                    { text: "英雄仔細觀察石碑上的符號，試圖解開謎題：“這些符號看起來像是一種古老的語言，也許我能解讀出它們的含義。”", nextScene: 4 },
+                    { text: "英雄尋找其他進入迷宮的方法：“也許有其他的路能繞過這些謎題。”", nextScene: 3.1 },
+                    { text: "英雄：“我需要幫助。”", nextScene: 3.2 }
+                ]
+            },
+            3.1: {
+                scene: "迷宮入口",
+                npc: `英雄在迷宮外徘徊，注意到一個隱藏在陰影中的小門。這是一條秘密通道，但裡面似乎有更多的陷阱和敵人等待著。“這條路看起來很危險，但也許是個捷徑。”`,
+                options: [
+                    { text: "英雄選擇通過秘密通道，面臨更多挑戰：“無論遇到什麼困難，我都會克服。”", nextScene: 4 }
+                ]
+            },
+            3.2: {
+                scene: "迷宮入口",
+                npc: `神秘老人：“年輕的戰士，我能感受到你的勇氣。這裡有一些提示和道具，可以幫助你穿越迷宮。記住，智慧和勇氣是你最好的盟友。”`,
+                options: [
+                    { text: "英雄得到幫助，順利進入迷宮：“非常感謝您的幫助，老人家。”", nextScene: 4 }
                 ]
             },
             4: {
                 scene: "黑暗城堡深處",
-                npc: "魔王：“你終於來了，愚蠢的英雄。你以為自己能打敗我？”",
+                npc: `魔王：“哈哈哈，你終於來了，愚蠢的英雄。你以為自己能打敗我嗎？這裡是我的領域，我的力量無窮無盡，而你，不過是一個孤身前來的螻蟻。準備迎接你的末日吧！”`,
                 options: [
-                    { text: "英雄：“為了公主，我必須打敗你！”", nextScene: 5 }
+                    { text: "英雄：“為了公主和整個王國，我必須打敗你！你的暴政今天就會結束！”", nextScene: 5 },
+                    { text: "英雄：“魔王，我們之間真的只能通過戰鬥解決問題嗎？我們能不能談談？”", nextScene: 4.1 },
+                    { text: "英雄：“我有一個秘密武器，它能夠壓制你的力量。”", nextScene: 4.2 }
+                ]
+            },
+            4.1: {
+                scene: "黑暗城堡深處",
+                npc: `魔王：“談判？你竟然還天真地想著談判？在這裡，只有力量才有話語權，而我就是這裡的最強者。準備迎接你無法承受的力量吧！”`,
+                options: [
+                    { text: "英雄：“既然如此，我也只能全力以赴，為了公主，為了這個世界，我會打敗你！”", nextScene: 5 }
+                ]
+            },
+            4.2: {
+                scene: "黑暗城堡深處",
+                npc: `魔王：“什麼？那是……這不可能！那是……”魔王驚愕地看著英雄手中的秘密武器，臉色變得蒼白。那件物品發出神秘的光芒，似乎擁有壓制魔王力量的力量。“不！這不可能……你從哪裡得到的這個東西？！”`,
+                options: [
+                    { text: "英雄：“這是村長給我的秘密武器，他說它能夠壓制你的力量。現在，準備迎接你的末日吧！”", nextScene: 5 }
                 ]
             },
             5: {
                 scene: "結局",
-                npc: "公主：“謝謝你，勇敢的英雄。你救了我，還救了我們的王國。”",
+                npc: `公主：“英勇的英雄，你做到了！你擊敗了那可怕的魔王，解救了我，還拯救了整個王國。你的勇氣和智慧將永遠被我們銘記。沒有你，我們將陷入無盡的黑暗。謝謝你，從心底裡感謝你。”`,
                 options: [
-                    { text: "英雄和公主一起返回村莊，受到村民們的熱烈歡迎。", nextScene: 'end' }
+                    { text: "英雄和公主一起返回村莊，受到村民們的熱烈歡迎。他們為英雄和公主舉行了盛大的慶祝活動。", nextScene: 'end' },
+                    { text: "英雄決定繼續他的冒險，尋找更多的挑戰和秘寶。他告別公主，踏上了新的旅程。", nextScene: 'end' },
+                    { text: "英雄與公主分享未來的計劃，他們決定一起努力，保護王國免受未來的災難。", nextScene: 'end' }
                 ]
             },
             'end': {
@@ -182,11 +249,6 @@
                 if (message !== '') {
                     displayMessage(message, 'user');
                     document.getElementById('messageInput').value = '';
-                    // 自动继续到下一场景
-                    if (script[currentScene].options && script[currentScene].options[0]) {
-                        currentScene = script[currentScene].options[0].nextScene;
-                        setTimeout(() => loadScene(currentScene), 1000); // 延迟1秒继续
-                    }
                 }
             });
 
@@ -195,6 +257,26 @@
                 if (sceneData) {
                     displayMessage(sceneData.npc, 'bot');
                     updateSceneImage(sceneData.scene);
+
+                    var optionsContainer = document.createElement('div');
+                    optionsContainer.id = 'optionsContainer';
+                    optionsContainer.style.display = 'flex';
+                    optionsContainer.style.flexDirection = 'column';
+                    optionsContainer.style.gap = '10px';
+                    optionsContainer.style.marginTop = '15px';
+
+                    sceneData.options.forEach(option => {
+                        var optionButton = document.createElement('button');
+                        optionButton.textContent = option.text;
+                        optionButton.onclick = function () {
+                            currentScene = option.nextScene;
+                            document.getElementById('messages').innerHTML = ''; // 清除上一個場景的對話
+                            loadScene(currentScene);
+                        };
+                        optionsContainer.appendChild(optionButton);
+                    });
+
+                    document.getElementById('messages').appendChild(optionsContainer);
                 }
             }
 
@@ -203,6 +285,7 @@
                 messageElement.textContent = message;
                 messageElement.className = 'message ' + sender;
                 document.getElementById('messages').appendChild(messageElement);
+                document.getElementById('messages').scrollTop = document.getElementById('messages').scrollHeight; // 自動滾動到底部
             }
 
             function updateSceneImage(scene) {
@@ -218,11 +301,10 @@
                 } else {
                     imagePath = './img/background.png';
                 }
-                document.getElementById('sceneImage').style.backgroundImage = `url('${imagePath}')`;
-                document.getElementById('sceneImage').style.backgroundSize = 'cover';
-                document.getElementById('sceneImage').style.backgroundPosition = 'center';
+                document.getElementById('sceneImage').innerHTML = `<img src="${imagePath}" alt="Scene Image" style="width:100%;">`;
             }
         }
     </script>
 </body>
 </html>
+
